--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@ With 4 years of regional recruitment experience and strong Technology recruitmen
 Having been spearheading market mapping through a management consulting approach such as researching competitor names, revenue numbers, financial performance, total headcount and reporting structure in APAC, salary information and salary bench-marking of the competition, Aria understands the job market in APAC very thoroughly and she is proficient in providing consultative advice to her clients.
 
 ## For Students
-(If you are a fresh graduate or a recent graduate)
+*(If you are a fresh graduate or a recent graduate)*
+
 Reviewing hundreds of CV is Aria's daily job. She can easily give you detailed advice on how to build and edit your resume. She will help you with the format, choices of the word, content and some tricks about how to catch HR's eye.
 
 Aria has also helped more than 300 candidates with their interview preparation. With very strong network in Singapore, Aria is likely to know your interviewers' interview style if you tell her the names of your interviewers. Moreover she is interviewing 10 candidates weekly which makes her very quick to tell how the interviewer would feel to your response and body language.
@@ -30,7 +31,8 @@ Aria will be all ears and hold your hand to walk along the process. Her goal is 
 Charges SGD 70 per hour (at least 1 hour) - The consulting session could be include anything above
 
 ## For Corporations
-(If you are an employer which has intention to set up a new office in APAC)
+*(If you are an employer which has intention to set up a new office in APAC)*
+
 With solid knowledge in APAC market, Aria is able to provide you a concrete analysis, presentation and advice about:
 
  * The general economy and job market for each country in APAC
@@ -48,9 +50,9 @@ Most importantly, Aria will provide you very customized solutions to your busine
 Charges SGD 100 per hour (at least 1 hour)
 
 ## Contact
-Mobile phone: +65 92355761
+Mobile phone: [+65 92355761](tel:+6592355761)
 
-Email address: aria_zhang@hotmail.com
+Email address: [aria_zhang@hotmail.com](mailto:aria_zhang@hotmail.com)
 </xmp>
 
 <body>
