--- a/index.html
+++ b/index.html
@@ -154,7 +154,8 @@
   </section>
 
   <div class="bg-dark text-center" style="padding: 20px 0;">
-    <h5>Aria Wenjia Zhang | <i class="fa fa-phone"></i><a href="tel:+6592355761"> +65 9235 5761</a> | <i class="fa fa-envelope"></i><a href="mailto:aria_zhang@hotmail.com"> aria_zhang@hotmail.com</a></h5>
+    <hr/>
+    <h5>Aria Wenjia Zhang <br/><br/> <i class="fa fa-phone"></i><a href="tel:+6592355761"> +65 9235 5761</a> | <i class="fa fa-envelope"></i><a href="mailto:aria_zhang@hotmail.com"> aria_zhang@hotmail.com</a></h5>
   </div>
 
   <!-- jQuery -->
