--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
     <div class="container">
       <div class="row">
         <h4>
-          With 4 years of regional recruitment experience and strong Technology recruitment background, Aria is a forward-thinking professional with strong track records in partnering clients from different industries in their recruitment needs. <BR/><BR/>
-          Having been spearheading market mapping through a management consulting approach such as researching competitor names, revenue numbers, financial performance, total headcount and reporting structure in APAC, salary information and salary bench-marking of the competition, Aria understands the job market in APAC very thoroughly and she is proficient in providing consultative advice to her clients.
+          With 5 years of regional recruitment consulting experience, Aria is a forward-thinking professional with strong track records in partnering clients from different industries in their recruitment needs. <BR/><BR/>
+          Having spearheaded market mapping through a management consulting approach such as researching competitor names, financial performance, reporting structure, and salary information of the competitors, Aria understands the job market in APAC very thoroughly and she is proficient in providing consultative advice to her clients.
         </h4>
       </div>
     </div>
@@ -107,8 +107,8 @@
       <div class="row">
         <h4>
           Reviewing hundreds of CV is Aria's daily job. She can easily give you detailed advice on how to build and edit your resume. She will help you with the format, choices of the word, content and some tricks about how to catch HR's eye.<BR/><BR/>
-          Aria has also helped more than 300 candidates with their interview preparation. With very strong network in Singapore, Aria is likely to know your interviewers' interview style if you tell her the names of your interviewers. Moreover she is interviewing 10 candidates weekly which makes her very quick to tell how the interviewer would feel to your response and body language.<BR/><BR/>
-          Having worked with most of global MNCs, done much research assignments in different industries and talked to senior management from more than 300 companies, Aria is also able to help you to decide among different offers. She can not only help you with offer negotiation but also provide you inside story about the companies and their career progression. It is always good to remember money is definitely not as important as career progression, company brand and your long term career goal when you just start your career.<BR/><BR/>
+          Aria has also helped more than 300 candidates with their interview preparation. With very strong network in Singapore, Aria is likely to know the company culture of many different organizations and able to prepare you for the interview accordingly. Moreover, she is interviewing 10 candidates weekly which makes her very quick to tell how the interviewer would feel to your response and body language.<BR/><BR/>
+          Having worked with most of global MNCs, done much research assignments in different industries and talked to senior management from more than 300 companies, Aria is also able to help you to decide among different offers. She can not only help you with offer negotiation but also provide you inside story about the companies and their career progression. It is always good to remember money is definitely not as important as career progression, company brand and your long term career goal, when you just start your career.<BR/><BR/>
           Last but not least, after you enter the workforce, you will notice there are so many differences compared to the school environment. You can also find Aria to help you on how to fit in the new environment and how to deal with your "office politics".<BR/><BR/>
           Aria will be all ears and hold your hand to walk along the process. Her goal is to make you have your ideal job eventually and transform you from a good school student to a confident working professional.
         </h4>
@@ -147,7 +147,7 @@
           </ul>
         </h4>
         <h3>Fees</h3>
-        <h4>Charges SGD 70 per hour (at least 1 hour) - The consulting session could be include anything above.</h4>
+        <h4>Charges SGD 270 per hour (at least 1 hour) - The consulting session could be include anything above.</h4>
       </div>
     </div>
   </section>
