--- a/index.html
+++ b/index.html
@@ -7,172 +7,11 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- Bootstrap Core CSS -->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-
-  <!-- Custom Fonts -->
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic|Merriweather+Sans:400,300,300italic,400italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-
-  <!-- Custom CSS -->
-  <link rel="stylesheet" type="text/css" href="css/custom.css">
-
-  <!-- Favicon -->
-
   <title>Aria Wenjia Zhang</title>
 </head>
 
-<body id="page-top">
-  <nav id="mainNav" class="navbar navbar-default navbar-fixed-top affix">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand page-scroll" href="#page-top">Aria Wenjia Zhang</a>
-      </div>
-
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-right">
-          <li class="active">
-            <a class="page-scroll" href="#about">About</a>
-          </li>
-          <li class="active">
-            <a class="page-scroll" href="#students">Students</a>
-          </li>
-          <li class="active">
-            <a class="page-scroll" href="#corporations">Corporations</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-  <header>
-    <div class="header-content">
-      <div class="header-content-inner">
-        <img src="image/logo.png" height="300px" width="auto" style="margin-top: 10px;" />
-        <h1>Aria Wenjia Zhang</h1>
-        <h4>Recruitment Consultant</h4>
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-              <div class="row">
-                <div class="col-md-6">
-                  <i class="fa fa-phone"></i><a href="tel:+6592355761"> +65 9235 5761</a>
-                </div>
-                <div class="col-md-6">
-                  <i class="fa fa-envelope"></i><a href="mailto:aria_zhang@hotmail.com"> aria_zhang@hotmail.com</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-  </header>
-
-  <section class="bg-dark" id="about">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 text-center">
-          <h1>About Aria</h1>
-          <hr class="primary">
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <h4>
-          With 5 years of regional recruitment consulting experience, Aria is a forward-thinking professional with strong track records in partnering clients from different industries in their recruitment needs. <BR/><BR/>
-          Having spearheaded market mapping through a management consulting approach such as researching competitor names, financial performance, reporting structure, and salary information of the competitors, Aria understands the job market in APAC very thoroughly and she is proficient in providing consultative advice to her clients.
-        </h4>
-      </div>
-    </div>
-  </section>
-
-  <section class="bg-primary" id="students">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 text-center">
-          <h1>For Students</h1>
-          <hr class="primary">
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <h4>
-          Reviewing hundreds of CV is Aria's daily job. She can easily give you detailed advice on how to build and edit your resume. She will help you with the format, choices of the word, content and some tricks about how to catch HR's eye.<BR/><BR/>
-          Aria has also helped more than 300 candidates with their interview preparation. With very strong network in Singapore, Aria is likely to know the company culture of many different organizations and able to prepare you for the interview accordingly. Moreover, she is interviewing 10 candidates weekly which makes her very quick to tell how the interviewer would feel to your response and body language.<BR/><BR/>
-          Having worked with most of global MNCs, done much research assignments in different industries and talked to senior management from more than 300 companies, Aria is also able to help you to decide among different offers. She can not only help you with offer negotiation but also provide you inside story about the companies and their career progression. It is always good to remember money is definitely not as important as career progression, company brand and your long term career goal, when you just start your career.<BR/><BR/>
-          Last but not least, after you enter the workforce, you will notice there are so many differences compared to the school environment. You can also find Aria to help you on how to fit in the new environment and how to deal with your "office politics".<BR/><BR/>
-          Aria will be all ears and hold your hand to walk along the process. Her goal is to make you have your ideal job eventually and transform you from a good school student to a confident working professional.
-        </h4>
-        <h3>Fees</h3>
-        <h4>Charges SGD 70 per hour (at least 1 hour) - The consulting session could be include anything above.</h4>
-      </div>
-    </div>
-  </section>
-
-  <section class="bg-dark" id="corporations">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 text-center">
-          <h1>For Corporations</h1>
-          <hr class="primary">
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <h4>
-          With solid knowledge in APAC market, Aria is able to provide you a concrete analysis, presentation and advice about:
-        <ul>
-           <li>The general economy and job market for each country in APAC</li>
-           <li>Which country to be set as your regional headquarter</li>
-           <li>Culture in different countries in APAC and precautions for each country</li>
-        </ul>
-          Most importantly, Aria will provide you very customized solutions to your business after understanding which industry you are in, your business plans and the concerns of your business.
-        </h4>
-        <h3>Successful business cases</h3>
-        <h4>
-          <ul>
-            <li>Aria has successfully partnered an Italian tech start up to understand the Asia market, the preferences of Asian candidates on recruitment process and how to attract Asian candidates</li>
-            <li>Aria has successfully advised a German manufacturing giant, which intended to set up their first office in China, on which cities to select, different talent pools in different cities in China, the impression of contract positions from Chinese candidates and policies about hiring foreigners in China.</li>
-            <li>Aria has successfully recommended a Chinese tech start up on whether to set up their very first overseas office in Singapore, the detailed 2 year business strategies for overseas business and what kinds of company structure they need for such an overseas office.</li>
-          </ul>
-        </h4>
-        <h3>Fees</h3>
-        <h4>Charges SGD 270 per hour (at least 1 hour) - The consulting session could be include anything above.</h4>
-      </div>
-    </div>
-  </section>
-
-  <div class="bg-dark text-center" style="padding: 20px 0;">
-    <hr/>
-    <h5>Aria Wenjia Zhang <br/><br/> <i class="fa fa-phone"></i><a href="tel:+6592355761"> +65 9235 5761</a> | <i class="fa fa-envelope"></i><a href="mailto:aria_zhang@hotmail.com"> aria_zhang@hotmail.com</a></h5>
-  </div>
-
-  <!-- jQuery -->
-  <script src="js/jquery_002.js"></script>
-
-  <!-- Bootstrap Core JavaScript -->
-  <script src="js/bootstrap.js"></script>
-
-  <!-- Plugin JavaScript -->
-  <script src="js/jquery.js"></script>
-
-  <!-- Custom JavaScript -->
-  <script src="js/main.js"></script>
-
-  <noscript>
-    <div style='position: fixed; bottom: 0; right: 20px; height: 32px; background: #fff; box-shadow: rgba(0, 0, 0, 0.498039) 0px 0px 3px; border-top-left-radius: 5px; border-top-right-radius: 5px; box-sizing: border-box; padding: 5px 10px; text-align: center;'>
-    </div>
-  </noscript>
+<body>
+  Aria Wenjia Zhang
 </body>
 
 </html>
